--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,85 @@
-/* You can add global styles to this file, and also import other style files */
+@import "fonts";
+@import "margins";
+:root {
+  --dark-color: #000;
+  --light-color: #fff;
+  --primary-color: #ae7aff;
+
+  --dark-hover-color: rgba(22, 22, 22, 1);
+
+  --primary-font-family: "JetBrains Mono", sans-serif;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: var(--dark-color);
+  color: var(--light-color);
+  font-family: var(--primary-font-family);
+  background-image: url("/assets/images/background.webp");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.h1 {
+  font-size: 48px;
+  line-height: 56px;
+  font-weight: 800;
+}
+
+.h6 {
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: 800;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.medium-text {
+  font-family: var(--primary-font-family);
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 16px;
+}
+
+.regular {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 20px;
+}
+
+.subtitle {
+  font-size: 14px;
+  line-height: 20px;
+  font-weight: 400;
+}
+
+.ss-control-label {
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 16px;
+}
+
+.ss-control-input {
+  display: flex;
+  border: 1px solid var(--light-color);
+  border-radius: 4px;
+  padding: 12px 20px;
+  background-color: var(--dark-color);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 21px;
+  font-family: var(--primary-font-family);
+  margin-top: 8px;
+  width: 100%;
+  color: var(--light-color);
+  outline: none;
+}
