--- a/src/app/pages/profile-page/profile-page.component.html
+++ b/src/app/pages/profile-page/profile-page.component.html
@@ -1,1 +1,45 @@
-<p>profile-page works!</p>
+@if(profile$ | async; as profile) {
+<header class="profile-page-header">
+  <app-profile-header [profile]="profile"></app-profile-header>
+  <app-button (click)="navigateSection()" class="edit-profile-btn"
+    >Edit <app-settings-icon></app-settings-icon
+  ></app-button>
+</header>
+
+
+
+<main class="profile-page__body">
+  <app-post-feed>
+	<app-post-input></app-post-input>
+	<app-post></app-post>
+  </app-post-feed>
+  <div class="">
+    <h3 class="h6 mb16">Followers</h3>
+    <div class="subscribers-wrap mb32">
+      @for (subscriber of subscribers$ | async; track subscriber.id) {
+      <a
+        [routerLink]="['/profile', subscriber.id]"
+        class="subscriber-avatar-button"
+      >
+        <img
+          [src]="subscriber.avatarUrl | imgUrl"
+          alt=""
+          class="subscriber-avatar"
+        />
+      </a>
+      }
+      <a [routerLink]="['/search']" class="to-subscriber-search"></a>
+    </div>
+    <h3 class="h6 mb16">Skills</h3>
+    <div class="stack-wrap mb32">
+      @for (skill of ['css', 'react']; track skill) {
+      <app-chips>{{ skill }}</app-chips>
+      }
+    </div>
+	<h3 class="h6 mb16">About me</h3>
+	<p class="medium-text">
+		{{profile.description}}
+	</p>
+  </div>
+</main>
+}
