--- a/src/app/common/button/button.component.scss
+++ b/src/app/common/button/button.component.scss
@@ -1,10 +1,13 @@
-.btn{
-	border: none;
-	background: var(--primary-color) ;
-	color: var(--dark-color);
-	padding: 8px 20px;
-	font-weight: 700;
-	font-size: 14px;
-	line-height: 24px;
-
+.btn {
+  border: none;
+  background: var(--primary-color);
+  color: var(--dark-color);
+  padding: 8px 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 24px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 5px;
 }
