edit profile page

--- a/src/app/common/button/button.component.html
+++ b/src/app/common/button/button.component.html
@@ -1,2 +1,3 @@
-<button class="btn full-width" ><ng-content></ng-content></button>
-
+<button class="btn full-width" [ngClass]="{ 'text-center': isCenter }">
+  <ng-content></ng-content>
+</button>
