--- a/src/app/pages/settings/settings.component.scss
+++ b/src/app/pages/settings/settings.component.scss
@@ -6,23 +6,22 @@
 }
 
 .profile-form {
-  padding: 32px;
-  border: 1px solid var(--light-color);
-  background-color: var(--dark-color);
   display: grid;
   gap: 20px;
+
+  &__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 1px solid var(--light-color);
+    background-color: var(--dark-color);
+    padding: 32px;
+    height: calc(100dvh - 24px * 4);
+  }
 }
 
 .two-columns {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-}
-
-.profile-label {
-
-}
-
-.profile-input {
-	
 }
