--- a/src/app/common/sidebar/sidebar.component.html
+++ b/src/app/common/sidebar/sidebar.component.html
@@ -1,12 +1,15 @@
 <img src="/assets/svg/logo-small.svg" class="ml16 mb20" alt="" />
 
-<nav>
+<nav class="mb20">
   <ul class="main-menu-list">
     <li *ngFor="let menuItem of menuItems">
-      <button class="menu-item">
+      <a 
+	  class="menu-item" 
+	  [routerLink]="[menuItem.link]"
+	  routerLinkActive="active">
         <ng-container *ngComponentOutlet="menuItem.icon"></ng-container
         >{{ menuItem.label }}
-      </button>
+      </a>
     </li>
   </ul>
 </nav>
