--- a/src/app/common/sidebar/sidebar.component.scss
+++ b/src/app/common/sidebar/sidebar.component.scss
@@ -25,9 +25,11 @@
   width: 100%;
   text-align: left;
   border-radius: 2px;
+  text-decoration: none;
 
   &:hover,
-  &:focus-visible {
+  &:focus-visible,
+  &.active {
     background-color: var(--dark-hover-color);
     color: var(--primary-color);
   }
