--- a/src/app/pages/login-page/login-page.component.scss
+++ b/src/app/pages/login-page/login-page.component.scss
@@ -9,11 +9,13 @@
 
 .login-form {
 	display: grid;
+	grid-template-columns: 1fr 1frdisplay;
 }
 
 .ss-login-img {
 	margin: 0 auto;
 	width: 100%;
+	max-width: 450px;
 }
 
 .password-input {
