--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -23,16 +23,19 @@
         class="ss-form-textarea"
       ></textarea>
     </label>
+    <label
+      ><span class="ss-form-label__text">Profile image</span
+      ><app-avatar-upload></app-avatar-upload
+    ></label>
+
     <label class="ss-form-label">
       <span class="ss-form-label__text">Stack</span>
       <input type="text" formControlName="stack" class="ss-form-input" />
     </label>
   </div>
   <div class="">
-	<div>
-		<app-button 
-		(click)="onSave()"
-		[isCenter]="true">Save</app-button>
-	</div>
+    <div>
+      <app-button (click)="onSave()" [isCenter]="true">Save</app-button>
+    </div>
   </div>
 </form>
